// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniRefColumnConfiguration component should render all columns: Cluster ID 1`] = `
<DocumentFragment>
  <a
    href="/uniref/undefined"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Cluster name 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render all columns: Common taxon 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render all columns: Common taxon ID 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/undefined"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Identity 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render all columns: Last updated 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render all columns: Length 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render all columns: Members 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Organism IDs 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Organisms 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Reference sequence 1`] = `
<DocumentFragment>
  <span
    class="break-anywhere"
  />
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Size 1`] = `
<DocumentFragment>
   member
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render all columns: Types 1`] = `<DocumentFragment />`;
